--- a/css/hero.css
+++ b/css/hero.css
@@ -1,26 +1,35 @@
 html, body{
 	font-family: Arial, sans-serif;
 	margin: 0;
+	text-align: center;
+	font-size: 20px;
 }
 
 header{
 	background-color: #203c68;
+	background-image: url('../img/pixel-image.gif');
+	background-repeat: repeat;
 	padding: 40px;
 	text-align: center;
 }
 
 h1{
-	font-size: 90px;
+	font-size: 80px;
 	color: white;
+	text-shadow: 0 4px 20px black;
+	margin: 0;
+	text-transform: uppercase;
 }
 
 header img{
-	border-radius: 175px;
+	border-radius: 174px;
     width: 300px;
-    border: 24px solid #CC0000;
+    border: 24px solid #CC3E3E;
+    box-shadow: 0 10px 20px black;
 }
 
 .content{
+	background-color: #E6E6E6;
 	max-width: 900px;
 	margin:0 auto;
 	padding: 0 20px;
@@ -46,7 +55,6 @@ a{
 	color: red;
 	text-decoration: none;
 }
-
 
 footer{
 	margin-top: 20px;
